<resources>
    <string name="app_name">DigiTiket</string>
    <string name="add_customer_title">Add Customer</string>
    <string name="add_customer_name">Name</string>
    <string name="add_customer_email">Email</string>
    <string name="add_customer_mobile">Mobile</string>
    <string name="add_expenses_number">Expenses Number</string>
    <string name="add_expenses_outlets">Outlets</string>
    <string name="add_expenses_date">Date</string>
    <string name="add_expenses_reason">Reason</string>
    <string name="add_expenses_amount">Amount</string>
    <string name="add_expenses_category">Expenses Category</string>
    <string name="add_expenses_file">File (Less Than 2 MB)</string>
    <string name="add_expenses_category_name">Expenses Category Name</string>
    <string name="add_expenses_category_status">Status</string>
    <string name="add_gift_card_title">Add Gift Card</string>
    <string name="add_gift_card_subtitle">Please fill in the information below</string>
    <string name="add_gift_card_number">Gift Card Number</string>
    <string name="add_gift_card_value">Value</string>
    <string name="add_gift_card_expire_date">Expire Date</string>
    <string name="add_outlets_name">Outlet Name</string>
    <string name="add_outlets_contact_number">Contact Number</string>
    <string name="add_outlets_address">Address</string>
    <string name="add_outlets_receipt_header">Receipt Header</string>
    <string name="add_outlets_receipt_footer">Receipt Footer</string>
    <string name="add_payment_customer">Customer</string>
    <string name="add_payment_total_payable">Total Payable Amount</string>
    <string name="add_payment_total_item">Total Purchased Items</string>
    <string name="add_payment_paid_by">Paid By</string>
    <string name="add_payment_paid_amount">Paid Amount</string>
    <string name="add_payment_card_number">Card Number</string>
    <string name="add_payment_cheque_number">Cheque Number</string>
    <string name="add_payment_gift_card">Gift Card</string>
    <string name="add_payment_return_change">Return Change</string>
    <string name="add_payment_method_name">Payment Method Name</string>
    <string name="add_product_code">Product Code</string>
    <string name="add_product_name">Product Name</string>
    <string name="add_product_category">Product Category</string>
    <string name="add_product_product_price">Product Price (Cost)</string>
    <string name="add_product_retail_price">Retail Price (Price)</string>
    <string name="add_product_image">Product Image</string>
    <string name="add_product_category_name">Name</string>
    <string name="add_purchase_order_number">Purchase Order Number</string>
    <string name="add_purchase_order_outlets">Outlets</string>
    <string name="add_purchase_order_suppliers">Suppliers</string>
    <string name="add_purchase_order_date">Created Date</string>
    <string name="add_purchase_order_note">Note</string>
    <string name="add_purchase_order_search">Search Product</string>
    <string name="add_purchase_order_add_to_list">Add To List</string>
    <string name="add_purchase_order_table_name">Product Name</string>
    <string name="add_purchase_order_table_code">Product Code</string>
    <string name="add_purchase_order_table_quantity">Order Quantity</string>
    <string name="add_purchase_order_table_action">Action</string>
    <string name="add_supplier_name">Supplier Name</string>
    <string name="add_supplier_email">Email</string>
    <string name="add_supplier_telephone">Telephone</string>
    <string name="add_supplier_fax">Fax</string>
    <string name="add_supplier_address">Supplier Address</string>
    <string name="add_supplier_tax">Supplier Tax</string>
    <string name="add_user_full_name">Full Name</string>
    <string name="add_user_email">Email</string>
    <string name="add_user_password">Password</string>
    <string name="add_user_confirm_password">Confirm Password</string>
    <string name="add_user_role">Role</string>
    <string name="add_user_outlets">Outlets</string>
    <string name="opened_bill_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_export">Export To Excel</string>
    <string name="btn_export_inventory">Export Inventory</string>
    <string name="btn_generate">Generate</string>
    <string name="btn_make_payment">Make Payment</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_receive">Receive</string>
    <string name="btn_report">Get Report</string>
    <string name="btn_sales_history">Sales History</string>
    <string name="btn_search">Search</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">Update</string>
    <string name="btn_update_system_setting">Update System Setting</string>
    <string name="btn_view">View</string>
    <string name="cashier_hint_barcode">Scan Your Barcode</string>
    <string name="cashier_add">Add Customer</string>
    <string name="cashier_all">All</string>
    <string name="cashier_cancel">Cancel</string>
    <string name="cashier_hold">Hold</string>
    <string name="cashier_payment">Payment</string>
    <string name="cashier_table_product">Product</string>
    <string name="cashier_table_quantity">Quantity</string>
    <string name="cashier_table_per_item">Per Item</string>
    <string name="cashier_table_total">Total</string>
    <string name="cashier_total_items">Total Items</string>
    <string name="cashier_total">Total</string>
    <string name="cashier_discount_amount">Dis.Amt./%</string>
    <string name="cashier_tax">Tax(7.00%)</string>
    <string name="cashier_total_payable">Total Payable</string>
    <string name="customer_title">Customer</string>
    <string name="customer_add">Add Customer</string>
    <string name="customer_name">Name</string>
    <string name="customer_email">E-mail</string>
    <string name="customer_mobile">Mobile</string>
    <string name="customer_table_name">Customer Name</string>
    <string name="customer_table_email">E-mail</string>
    <string name="customer_table_mobile">Mobile</string>
    <string name="customer_table_action">Action</string>
    <string name="dashboard_btn_pos">Point Of Sales</string>
    <string name="dashboard_btn_sales">Sales</string>
    <string name="dashboard_btn_reports">Reports</string>
    <string name="dashboard_btn_outlets">Outlets</string>
    <string name="dashboard_btn_users">Users</string>
    <string name="dashboard_btn_settings">Settings</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="debit_customer_name">Customer Name</string>
    <string name="edit_customer_name">Full Name</string>
    <string name="edit_customer_email">E-Mail</string>
    <string name="edit_customer_mobile">Mobile</string>
    <string name="edit_expenses_number">Expenses Number</string>
    <string name="edit_expenses_outlet">Outlets</string>
    <string name="edit_expenses_date">Date</string>
    <string name="edit_expenses_reason">Reason</string>
    <string name="edit_expenses_amount">Amount</string>
    <string name="edit_expenses_category">Expenses Category</string>
    <string name="edit_expenses_file">File (Less Than 2 MB)</string>
    <string name="edit_expenses_category_name">Expenses Category Name</string>
    <string name="edit_expenses_category_status">Status</string>
    <string name="edit_gift_card_number">Gift Card Number</string>
    <string name="edit_gift_card_value">Value</string>
    <string name="edit_gift_card_expired_date">Expired Date</string>
    <string name="edit_inventory_inventory_by_outlet">Inventory By Outlets</string>
    <string name="edit_inventory_product_code">Product Code : </string>
    <string name="edit_inventory_product_name">Product Name : </string>
    <string name="edit_inventory_outlets">Outlets</string>
    <string name="edit_inventory_quantity">Inventory Quantity</string>
    <string name="edit_outlet_outlet">Outlet </string>
    <string name="edit_outlet_name">Outlets Name</string>
    <string name="edit_outlet_contact_number">Contact Number</string>
    <string name="edit_outlet_address">Address</string>
    <string name="edit_outlet_receipt_footer">Receipt Footer</string>
    <string name="edit_password_new">New Password</string>
    <string name="edit_password_confirm">Confirm Password</string>
    <string name="edit_payment_customer">Customer</string>
    <string name="edit_payment_total_payable">Total Payable Amount</string>
    <string name="edit_payment_total_item">Total Purchased Items</string>
    <string name="edit_payment_paid_by">Paid By</string>
    <string name="edit_payment_paid_today">Paid Today</string>
    <string name="edit_payment_paid_amount">Paid Amount</string>
    <string name="edit_payment_return_change">Return Change</string>
    <string name="edit_payment_method_name">Payment Method Name</string>
    <string name="edit_payment_method_status">Status</string>
    <string name="edit_product_code">Product Code</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_product_category">Category Name</string>
    <string name="edit_product_purchase_price">Purchase Price (Cost)</string>
    <string name="edit_product_retail_price">Retail Price (Price)</string>
    <string name="edit_product_image">Product Image</string>
    <string name="edit_product_status">Status</string>
    <string name="edit_product_category_name">Product Category Name</string>
    <string name="navigation_menu_dashboard">Dashboard</string>
    <string name="navigation_menu_customers">Customers</string>
    <string name="navigation_menu_gift_card">Gift Card</string>
    <string name="navigation_menu_add_gift_card">Add Gift Card</string>
    <string name="navigation_menu_list_gift_card">List Gift Card</string>
    <string name="navigation_menu_debit">Debit</string>
    <string name="navigation_menu_sales">Sales</string>
    <string name="navigation_menu_today_sales">Today\'s Sales</string>
    <string name="navigation_menu_opened_bill">Opened Bill</string>
    <string name="navigation_menu_report">Report</string>
    <string name="navigation_menu_sales_report">Sales Report</string>
    <string name="navigation_menu_sold_by_product">Sold By Product</string>
    <string name="navigation_menu_expenses">Expenses</string>
    <string name="navigation_menu_expenses_category">Expenses Category</string>
    <string name="navigation_menu_profit_and_loss">Profit And Loss</string>
    <string name="navigation_menu_profit_and_loss_report">Profit And Loss Report</string>
    <string name="navigation_menu_pos">POS</string>
    <string name="navigation_menu_return_order">Return Order</string>
    <string name="navigation_menu_create_return_order">Create Return Order</string>
    <string name="navigation_menu_return_order_report">Return Order Report</string>
    <string name="navigation_menu_inventory">Inventory</string>
    <string name="navigation_menu_product">Product</string>
    <string name="navigation_menu_list_product">List Product</string>
    <string name="navigation_menu_print_product_label">Print Product Label</string>
    <string name="navigation_menu_product_category">Product Category</string>
    <string name="navigation_menu_purchase_order">Purchase Order</string>
    <string name="navigation_menu_setting">Setting</string>
    <string name="navigation_menu_outlets_setting">Outlets Setting</string>
    <string name="navigation_menu_user_setting">User Setting</string>
    <string name="navigation_menu_supplier_setting">Supplier Setting</string>
    <string name="navigation_menu_system_setting">System Setting</string>
    <string name="navigation_menu_payment_method">Payment Method</string>
</resources>